Fix loading broken TGA files

There are TGA files in the wild that report not having alpha
channel in the flags in 32-bit mode (although they have it).

Just ignore this TGA field and read alpha channel all the time.

BUG:354791